--- a/bin/Options.properties
+++ b/bin/Options.properties
@@ -1,6 +1,15 @@
+# logiciel
+nomLogiciel = Billeterie
+versionLogiciel = v1.0
+authors_names = Raphael Baron - raphael.baron@insa-rennes.fr\nXavier Fraboulet - xavier.fraboulet@insa-rennes.fr\nBruno Matry - bruno.matry@insa-rennes.fr\nPaul-Mehdy M\u2019Rabet - paul-mehdy.mrabet@insa-rennes.fr
+
+# options de langue
 langage = fr
 langage_curr = Francais
 other_langage_0 = English
-selection_multiple = 0
 Francais = fr
 English = en
+
+# nom du fichier de billeterie
+billeterie = database.sqlite
+selection_multiple = 0
