--- a/src/Options.properties
+++ b/src/Options.properties
@@ -7,8 +7,10 @@ authors_names = Raphael Baron - raphael.baron@insa-rennes.fr\nXavier Fraboulet -
 langage = fr
 langage_curr = Francais
 other_langage_0 = English
+other_langage_1 = Espanol
 Francais = fr
 English = en
+Espanol = sp
 
 # nom du fichier de billeterie
 billeterie = database.sqlite
