--- a/src/Options.properties
+++ b/src/Options.properties
@@ -4,10 +4,12 @@ versionLogiciel = v1.0
 authors_names = Raphael Baron - raphael.baron@insa-rennes.fr\nXavier Fraboulet - xavier.fraboulet@insa-rennes.fr\nBruno Matry - bruno.matry@insa-rennes.fr\nPaul-Mehdy M\u2019Rabet - paul-mehdy.mrabet@insa-rennes.fr
 
 # options de langue
-langage = fr
 langage_curr = Francais
 other_langage_0 = English
 other_langage_1 = Espanol
+nb_langages = 3
+
+# choix de l'extension du fichier Messages_**.properties
 Francais = fr
 English = en
 Espanol = sp
