Langue : ajout de l'italien et du portugais

--- a/bin/Options.properties
+++ b/bin/Options.properties
@@ -7,12 +7,16 @@ authors_names = Raphael Baron - raphael.baron@insa-rennes.fr\nXavier Fraboulet -
 langage_curr = Francais
 other_langage_0 = English
 other_langage_1 = Espanol
-nb_langages = 3
+other_langage_2 = Italiano
+other_langage_3 = Portugues
+nb_langages = 5
 
 # choix de l'extension du fichier Messages_**.properties
 Francais = fr
 English = en
 Espanol = sp
+Italiano = it
+Portugues = pt
 
 # nom du fichier de billeterie
 billeterie = database.sqlite
